Fixed spacing between photo-grid and places blocks

--- a/blocks/photo-grid/__inner-container/photo-grid__inner-container.css
+++ b/blocks/photo-grid/__inner-container/photo-grid__inner-container.css
@@ -6,12 +6,14 @@
 @media screen and (min-width: 768px) {
   .photo-grid__inner-container {
     margin-top: 88px;
+    margin-bottom: 88px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .photo-grid__inner-container {
     margin-top: 92px;
+    margin-bottom: 92px;
     max-width: 1184px;
   }
 }
